Make sure toast max width doesnt exceed screen size on mobile devices

--- a/packages/core/src/components/toast/_toast.scss
+++ b/packages/core/src/components/toast/_toast.scss
@@ -103,7 +103,7 @@ $toast-intent-colors: (
   box-shadow: $pt-toast-box-shadow;
   display: flex;
   margin: $toast-margin 0 0;
-  max-width: $toast-max-width;
+  max-width: min($toast-max-width, calc(100vw - $toast-margin));
   min-width: $toast-min-width;
 
   // toast is interactive even though container isn't
